--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
+    "@types/react-slick": "^0.23.13",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.507.0",
